# predictive-funding-challenge

./: .gitignore  README.md  pyproject.toml
data/raw/: hf_test.csv  hf_train.csv  pond_test.csv  pond_train.csv
notebooks/: gh.ipynb  hf.ipynb  pond.ipynb
pfc/: data.py
