[project]
name = "predictive-funding-challenge"
version = "1.0.0"
description = "Creating datasets and models to predict the amount of past funding received by open source projects"
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "category-encoders>=2.8.0",
    "feature-engine>=1.8.2",
    "httpx>=0.28.1",
    "lightgbm>=4.5.0",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.6.1",
    "skrub>=0.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pfc"]
